[tool.poetry]
name = "audiozerowatermarking-sc"
version = "0.1.0"
description = ""
authors = ["ioComk <rw110407@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pysoundfile = "^0.9.0.post1"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
